# tatoebacpp

./: .gitignore  CMakeLists.txt  README.md  config.js
doc/: INSTALL  init_sqlitedb.sql  sqlite3.db  tatodb.xml
locale/fr/LC_MESSAGES/: hello.mo  hello.po
src/: indexer.cpp  main.cpp  main.cpp.old  tatoeba.cpp  tatoeba.h
src/contents/: Config.cpp  Config.h  allUsers.h  content.h  homepage.h  languages.h  login_form.h  my_profile.h  of_user.h  pages.h  register.h  searches.h  sentences.h  tags.h  users.h
src/contents/forms/: add_sentence.h  change_interface_langs.h  edit_lang_sentence.h  edit_text_sentence.h  login.h  register.h  search.h  translate_sentence.h
src/contents/forms/generics/: filter_lang.h
src/contents/forms/my_profile/: add_spoken_lang.h  change_avatar.h  change_depth.h  change_password.h  edit_description.h  edit_homepage.h  edit_spoken_lang.h
src/contents/forms/tags/: add.h
src/contents/helpers/: helpers.h  paginations.h  sentences.h  users.h
src/controllers/: Controller.cpp  Controller.h  Pages.cpp  Pages.h  Searches.cpp  Searches.h  Sentences.cpp  Sentences.h  Users.cpp  Users.h
src/controllers/apis/: Admin.cpp  Admin.h  Controller.cpp  Controller.h  Languages.cpp  Languages.h  Searches.cpp  Searches.h  Sentences.cpp  Sentences.h
src/controllers/generics/: Controller.cpp  Controller.h  Sentences.cpp  Sentences.h
src/controllers/webs/: Controller.cpp  Controller.h  MyProfile.cpp  MyProfile.h  OfUser.cpp  OfUser.h  Pages.cpp  Pages.h  Searches.cpp  Searches.h  Sentences.cpp  Sentences.h  Tags.cpp  Tags.h  Users.cpp  Users.h
src/generics/: ActionId.cpp  ActionId.h  Languages.cpp  Languages.h  Singleton.h
src/models/: CustomDB.h  OfUser.cpp  OfUser.h  SearchEngine.cpp  SearchEngine.h  Searches.cpp  Searches.h  Sentences.cpp  Sentences.h  SphinxClient.cpp  SphinxClient.h  SqliteModel.cpp  SqliteModel.h  Tags.cpp  Tags.h  TatoDB.cpp  TatoDB.h  Users.cpp  Users.h  UsersSpokenLangs.cpp  UsersSpokenLangs.h  Wall.h
src/results/: pagination.h  searches.h  sentences.h  sentences_stats.h  spoken_langs.h  tags.h  users.h
src/views/: contribute.tmpl  homepage.tmpl  termsofuse.tmpl
src/views/api/helpers/: sentences.tmpl
src/views/api/languages/: get_supported_langs.tmpl
src/views/api/searches/: simple.tmpl
src/views/api/sentences/: show.tmpl
src/views/helpers/: homepage_modules.tmpl  pagination.tmpl  sentences.tmpl
src/views/layouts/: login.tmpl  master.tmpl
src/views/pages/: homepage.tmpl  team_and_credits.tmpl.desa
src/views/searches/: show_result.tmpl
src/views/sentences/: add.tmpl  edit_lang.tmpl  edit_text.tmpl  show.tmpl  translate.tmpl
src/views/users/: allUsers.tmpl.desa  login.tmpl  register.tmpl  register.tmpl.desa  register_new.tmpl
src/views/web/helpers/: homepage_modules.tmpl  pagination.tmpl  sentences.tmpl
src/views/web/layouts/: login.tmpl.desa  master.tmpl
src/views/web/my_profile/: add_spoken_lang.tmpl  change_avatar.tmpl  change_depth.tmpl  change_password.tmpl  edit_description.tmpl  edit_homepage.tmpl  edit_spoken_lang.tmpl  show.tmpl
src/views/web/ofuser/: sentences_of.tmpl  sentences_of_in.tmpl  translate_sentences_of.tmpl  translate_sentences_of_in.tmpl
src/views/web/pages/: homepage.tmpl
tools/: cppcms_tmpl_cc  generate_sed_sphinx_dump.py  generate_sphinx_conf.py
(+13 files in other folders)
